syntax = "proto3";
package pb;
option go_package = "../pb";

import "google/protobuf/empty.proto";

service Connect{
  // 私聊消息投递
  // google.protobuf.Empty是一个预定义的消息类型，表示服务器不需要返回任何数据。在这种情况下，当服务器成功处理完请求后，它不会返回任何额外的数据给客户端
  rpc DeliverMessage (DeliverMessageReq) returns (google.protobuf.Empty);
  // 群聊消息投递
  rpc DeliverGroupMessage (DeliverMessageGroupReq) returns (google.protobuf.Empty);
}



message DeliverMessageReq {
  int64 receiver_id = 1;   //  消息接收者
  bytes data = 2;  // 要投递的消息
}

message DeliverMessageGroupReq{
  map<int64, bytes> receiver_id_2_data = 1; // 消息接受者到要投递的消息的映射
}